# fibonacci_seq

./: .gitignore  pyproject.toml
fibonacci_seq/: fibonacci_seq.py  main.py
tests/: test_fibonacci_seq.py
