[tool.poetry]
name = "fibonacci_seq"
version = "0.1.0"
description = ""
authors = ["okmtz <yuto430scuderia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
